<resources>
    <string name="app_name">Burstcoin Widgets</string>
    <string name="settings_title">Burstcoin Widgets - Settings</string>
    <string name="widget_address">Burstcoin Address</string>
    <string name="widget_network">Burstcoin Network</string>
    <string name="widget_price">Burstcoin Price</string>
    <string name="burstcoin">Burstcoin</string>
    <string name="burst_logo_content_description">Burstcoin Logo</string>
    <string name="burst_price_title">Burstcoin Price</string>
    <string name="burst_price_title_refreshing">Burstcoin Price (Refreshing…)</string>
    <string name="burst_price_title_refresh_error">Burstcoin Price (Error refreshing)</string>
    <string name="burst_price_price">Price (%1$s): %2$s</string>
    <string name="burst_price_price_loading">Price: Loading…</string>
    <string name="burst_price_market_capital">Market Capital (%1$s): %2$s</string>
    <string name="burst_price_market_capital_loading">Market Capital: Loading…</string>
    <string name="loading">Loading…</string>

    <string name="burst_network_title">Burstcoin Network</string>
    <string name="burst_network_title_refreshing">Burstcoin Network (Refreshing…)</string>
    <string name="burst_network_title_refresh_error">Burstcoin Network (Error refreshing)</string>
    <string name="burst_network_block_height">Block Height: %1$s</string>
    <string name="burst_network_block_height_loading">Block Height: Loading…</string>
    <string name="burst_network_public_node_count">%1$s Public Nodes</string>
    <string name="burst_network_public_node_count_loading">Loading Public Node Count…</string>
    <string name="burst_network_public_node_stats">%1$s%% Public Nodes Valid</string>
    <string name="burst_network_public_node_stats_loading">Loading Public Node Stats…</string>

    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="error_saving">Error saving</string>
    <string name="error_burst_rs_invalid">Invalid Burst Address.</string>
    <string name="burst_account_title">%1$s</string>
    <string name="burst_account_title_unloaded">Burstcoin Account</string>
    <string name="burst_account_title_refresh_error">Burstcoin Account (Error Refreshing)</string>
    <string name="burst_account_title_not_set">Burstcoin Account (Account not set)</string>
    <string name="burst_account_hint_not_set">Tap here to set account</string>
    <string name="burst_account_title_refreshing">%1$s (Refreshing…)</string>
    <string name="burst_account_name">Name: %1$s</string>
    <string name="burst_account_balance">Balance: %1$s</string>
    <string name="burst_account_reward_recipient">Reward Recipient: %1$s</string>
</resources>
